Tue May 13 18:22:38 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am: fixing bug #112803 , make sure to avoid
	  network accesses when building

Sat May 10 14:19:14 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixed a segfault introduced with the RVT
	  handling change, bug #112703 .

Sat May 10 13:05:21 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: make sure stylesheet compilation errors
	  forces a NULL stylesheet, fixes #112270

Sun May  4 17:41:23 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in : preparing release 1.0.30
	* doc/apibuild.py: backported a patch from libxml2
	* doc/*: updated and rebuilt the docs

Wed Apr 30 22:44:49 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c libxslt/variables.c libxslt/xsltInternals.h:
	  cleaning up Result Value Tree handling
	* libexslt/functions.c libexslt/strings.c: fixed a pair of
	  implementations.
	* tests/exslt/strings/Makefile.am tests/exslt/strings/tokenize.2.*:
	  added Mark Vakoc test combining for-each and exslt:tokenize

Wed Apr 30 15:23:33 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #111755 when a template is
	  applied to an attribute
	* tests/docs/Makefile.am tests/docs/bug-119.*
	  tests/general/Makefile.am tests/general/bug-119*: added the
	  example in the regression tests for that bug.

Tue Apr 29 15:18:31 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am doc/libxslt.xml: upgraded to the XML/XSLT toolchain
	  for the HTML generation fixing #111799
	* doc/html/*.html doc/html/*.png: associated update

Sun Apr 27 18:00:12 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/variables.c: removed premature call to xsltFreeStackElem
	* win32/libxslty.def.src: added more exports

Sun Apr 27 12:46:31 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* NEWS doc/*.xsl doc/*.html: updated the web site, made the