@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<a>
+   <b>3</b>
+   <b/>
+   <b>1</b>
+   <b>4</b>
+   <b/>
+   <b/>
+   <b>-1</b>
+   <b>some alpha</b>
+   <b/>
+   <b>-99999999</b>
+   <b/>
+</a>
+
