@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<a>
+   Ascending numeric
+   <b>-99999999</b><b>-1</b><b>1</b><b>3</b><b>4</b><b/><b/><b/><b>some alpha</b><b/><b/>
+   Descending numeric
+   <b/><b/><b/><b>some alpha</b><b/><b/><b>4</b><b>3</b><b>1</b><b>-1</b><b>-99999999</b>
+   Ascending alpha
+   <b/><b/><b/><b/><b/><b>-1</b><b>-99999999</b><b>1</b><b>3</b><b>4</b><b>some alpha</b></a>
