@@ -1,3 +1,8 @@
+Thu May 15 11:45:00 HKT 2003 William Brack <wbrack@mmm.com.hk>
+
+	* libxslt/xsltutils.c: fixing bug #112995, a problem with
+	  NaN within the sort element. Also added regression test.
+
 Tue May 13 18:22:38 EDT 2003 Daniel Veillard <daniel@veillard.com>
 
 	* doc/Makefile.am: fixing bug #112803 , make sure to avoid
